feat:完成单聊消息的已读和未读处理

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,14 @@
     -->
     <title>React App</title>
     <style>
-      html{ 
+      html {
         overflow: hidden;
+      }
+      body {
+        height: 100%;
+      }
+      #root {
+        height: 100%;
       }
     </style>
   </head>
