feat: 完成表情功能

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,12 @@
       #root {
         height: 100%;
       }
+      div {
+        font-family: "Segoe UI Emoji", "Segoe UI Symbol", "Segoe UI",
+          "Apple Color Emoji", "Twemoji Mozilla", "Noto Color Emoji",
+          "Android Emoji", -apple-system, BlinkMacSystemFont, Roboto,
+          "Helvetica Neue", Arial, "Noto Sans", sans-serif !important;
+      }
     </style>
   </head>
   <body>
